## Process this file with automake to produce Makefile.in.

grisbi_help_image_icondir =  $(docdir)/fr/image/icon


grisbi_help_image_icon_DATA = \
	comments.png \
	contents_motif.gif \
	display_1line.png \
	display_2lines.png \
	display_3lines.png \
	display_4lines.png \
	display_large.png \
	display_medium.png \
	display_small.png \
	form_close.png \
	form_open.png \
	grisbi.png \
	next_motif.gif \
	previous_motif.gif \
	properties.png \
	rec_mask.png \
	rec_show.png \
	transactions.png \
	tree_1branch.png \
	tree_2branch.png \
	tree_3branch.png \
	tree_close.png


EXTRA_DIST =  $(grisbi_help_image_icon_DATA)

